# safeskill

./: .gitignore  README.md  pyproject.toml
docs/plans/: 2026-04-29-safeskill-plan.md  iteration-1.md  iteration-10.md  iteration-11.md  iteration-12.md  iteration-13.md  iteration-14.md  iteration-2.md  iteration-3.md  iteration-4.md  iteration-5.md  iteration-6.md  iteration-7.md  iteration-8.md  iteration-9.md
src/safeskill/: cli.py  github_fetcher.py  marketplace_discovery.py  renderers_html.py  renderers_markdown.py  terminal_git.py  terminal_runner.py
src/safeskill/adapters/: input_adapter.py
src/safeskill/analyzers/: static_rules.py
src/safeskill/models/: analysis.py  batch_scan.py  finding.py  input_target.py  skill_manifest.py
src/safeskill/parsers/: skill_manifest_parser.py
src/safeskill/pipeline/: analysis_pipeline.py  batch_scan_service.py
tests/: test_analysis_models.py  test_analysis_pipeline.py  test_batch_input_adapter.py  test_batch_scan_models.py  test_cli.py  test_discover_marketplace_cli.py  test_finding_models.py  test_github_fetcher.py  test_html_renderer.py  test_input_adapters.py  test_input_models.py  test_markdown_renderer.py  test_marketplace_discovery.py  test_parse_manifest_cli.py  test_report_html_cli.py  test_report_markdown_cli.py  test_scan_batch_cli.py  test_scan_cli.py  test_scan_github_cli.py  test_scan_marketplace_cli.py  test_semantic_stub.py  test_skill_manifest_extraction.py  test_skill_manifest_models.py  test_skill_manifest_parser.py  test_static_rules_commands.py  test_static_rules_signals.py
(+1 files in other folders)
