[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safeskill"
version = "0.1.0"
description = "Security analysis tooling for agent skills"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "typer>=0.12",
  "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "httpx>=0.27",
]

[project.scripts]
safeskill = "safeskill.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
